--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -22,10 +22,12 @@
 	<div class="container">
 		<!-- h1 through h6 are headers. The higher the number, the smaller the header -->
 		<!-- p means paragraph -->
-		<div class="banner">
-			<h1>GO!outside</h1>
-			<p>Find cool new places</p>
-		</div>
+		<ul>
+		  <li><a href="/">GO!outside</a></li>
+		</ul>
+
+
+	</div>
 
 	<script src="https://code.jquery.com/jquery.js"></script>
 	<script src="/js/bootstrap.min.js"></script>
