--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -22,9 +22,11 @@
 	<div class="container">
 		<!-- h1 through h6 are headers. The higher the number, the smaller the header -->
 		<!-- p means paragraph -->
-		<ul>
-		  <li><a href="/">GO!outside</a></li>
-		</ul>
+		<div class="navbar">
+			<ul>
+			  <li><a href="/">GO!outside</a></li>
+			</ul>
+	</div>
 
 
 	</div>
