--- a/public/css/gooutside.css
+++ b/public/css/gooutside.css
@@ -5,6 +5,8 @@
 	left: 0;
 	bottom: 0;
 	right: 0;
+	width: 100%;
+	background-color: #4CAF50;
 	z-index: 999;
 }
 
@@ -13,7 +15,6 @@
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #4CAF50;
 }
 
 .navbar li {
