--- a/public/css/gooutside.css
+++ b/public/css/gooutside.css
@@ -1,12 +1,13 @@
 .navbar {
-	position: relative;
+	position: fixed;
 	background: none;
+	border-radius: 0;
 	top: 0;
 	left: 0;
 	bottom: 0;
 	right: 0;
 	width: 100%;
-	background-color: #4CAF50;
+	height: 1em;
 	z-index: 999;
 }
 
@@ -15,6 +16,7 @@
     margin: 0;
     padding: 0;
     overflow: hidden;
+    background-color: #4CAF50;
 }
 
 .navbar li {
