--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -22,11 +22,15 @@
 	<div class="container">
 		<!-- h1 through h6 are headers. The higher the number, the smaller the header -->
 		<!-- p means paragraph -->
+		<div class="splash">
+		</div>
+		<!--
 		<div class="navbar">
 			<ul>
 			  <li><a href="/">GO!outside</a></li>
 			</ul>
 	</div>
+	-->
 
 
 	</div>
