--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -18,12 +18,10 @@
     <![endif]-->
 </head>
 
-<body>
+<body class="splash">
 	<div class="container">
 		<!-- h1 through h6 are headers. The higher the number, the smaller the header -->
 		<!-- p means paragraph -->
-		<div class="splash">
-		</div>
 		<!--
 		<div class="navbar">
 			<ul>
