--- a/public/css/gooutside.css
+++ b/public/css/gooutside.css
@@ -1,7 +1,13 @@
+html {
+	height: 100%;
+}
+
 .splash {
 	background: url("../images/splash1.jpg");
 	background-repeat: no-repeat;
 	background-size: cover;
+	min-height: 100%;
+	height: 100%;
 }
 
 .navbar {
