--- a/public/css/gooutside.css
+++ b/public/css/gooutside.css
@@ -1,13 +1,9 @@
 html {
-	height: 100%;
-}
-
-.splash {
-	background: url("../images/splash1.jpg");
-	background-repeat: no-repeat;
+	background: url("../images/splash1.jpg") no-repeat center center fixed;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
 	background-size: cover;
-	min-height: 100%;
-	height: 100%;
 }
 
 .navbar {
