--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -18,7 +18,7 @@
     <![endif]-->
 </head>
 
-<body class="splash">
+<body>
 	<div class="container">
 		<!-- h1 through h6 are headers. The higher the number, the smaller the header -->
 		<!-- p means paragraph -->
