--- a/public/css/gooutside.css
+++ b/public/css/gooutside.css
@@ -4,6 +4,11 @@ html {
 	-moz-background-size: cover;
 	-o-background-size: cover;
 	background-size: cover;
+	min-height: 100%;
+}
+
+body {
+	min-height: 100%;
 }
 
 .navbar {
