--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -22,18 +22,26 @@
 	<div class="container">
 		<!-- h1 through h6 are headers. The higher the number, the smaller the header -->
 		<!-- p means paragraph -->
+
+		<div class="splashbuttons">
+			<button type="button" class="btn btn-success">Login</button>
+			<button type="button" class="btn btn-success">SignUp</button>
+		</div>
+
 		<!--
 		<div class="navbar">
 			<ul>
 			  <li><a href="/">GO!outside</a></li>
 			</ul>
-	</div>
-	-->
+		</div>
+		-->
 
 
 	</div>
 
 	<script src="https://code.jquery.com/jquery.js"></script>
 	<script src="/js/bootstrap.min.js"></script>
+	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+
 </body>
 </html>
