--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -24,8 +24,8 @@
 		<!-- p means paragraph -->
 
 		<div class="splashbuttons">
-			<button type="button" class="btn btn-success">Login</button>
-			<button type="button" class="btn btn-success">SignUp</button>
+			<button type="button" class="btn btn-success btn-lg btn-block">Login</button>
+			<button type="button" class="btn btn-success btn-lg btn-block">SignUp</button>
 		</div>
 
 		<!--
