--- a/public/css/gooutside.css
+++ b/public/css/gooutside.css
@@ -12,8 +12,9 @@ body {
 }
 
 .splashbuttons {
-	position: relative;
-	bottom: 20%;
+	text-align: center;
+	position: absolute;
+	bottom: 10%;
 }
 
 .navbar {
