--- a/public/css/gooutside.css
+++ b/public/css/gooutside.css
@@ -14,7 +14,10 @@ body {
 .splashbuttons {
 	text-align: center;
 	position: absolute;
-	bottom: 10%;
+	padding-left: 10%;
+	padding-right: 10%;
+	bottom: 5%;
+	width: 100%;
 }
 
 .navbar {
