--- a/public/css/gooutside.css
+++ b/public/css/gooutside.css
@@ -14,6 +14,7 @@ body {
 .splashbuttons {
 	text-align: center;
 	position: absolute;
+	left: 0;
 	padding-left: 10%;
 	padding-right: 10%;
 	bottom: 5%;
