--- a/public/css/gooutside.css
+++ b/public/css/gooutside.css
@@ -11,6 +11,13 @@ body {
 	min-height: 100%;
 }
 
+.logo {
+	text-align: center;
+	position: absolute;
+	left: 0;
+	top: 10%;
+}
+
 .splashbuttons {
 	text-align: center;
 	position: absolute;
