--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -23,6 +23,10 @@
 		<!-- h1 through h6 are headers. The higher the number, the smaller the header -->
 		<!-- p means paragraph -->
 
+		<div class="logo">
+			GO!outside
+		</div>
+
 		<div class="splashbuttons">
 			<button type="button" class="btn btn-default btn-lg btn-block">Login</button>
 			<button type="button" class="btn btn-default btn-lg btn-block">SignUp</button>
