--- a/public/css/gooutside.css
+++ b/public/css/gooutside.css
@@ -14,8 +14,13 @@ body {
 .logo {
 	text-align: center;
 	position: absolute;
+	color: white;
+	font-size: 5em;
+	font-style: italic;
+	font-weight: bold;
 	left: 0;
 	top: 10%;
+	width: 100%;
 }
 
 .splashbuttons {
