--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -46,6 +46,7 @@
 	<script src="https://code.jquery.com/jquery.js"></script>
 	<script src="/js/bootstrap.min.js"></script>
 	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+	<script src="/js/splash.js"></script>
 
 </body>
 </html>
