--- a/public/css/gooutside.css
+++ b/public/css/gooutside.css
@@ -56,6 +56,11 @@ body {
 
 .navbar li {
     float: left;
+		display: block;
+		color: white;
+		text-align: center;
+		padding: 14px 16px;
+		text-decoration: none;
 }
 
 .navbar li a {
