--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -23,12 +23,12 @@
 
 		<div class="navbar">
 			<ul>
-			  <li><b>Login</b></li>
+			  <li><b>Sign Up</b></li>
 			</ul>
 		</div>
 
-		<form id="loginForm" role="form" method="get" action="/">
-			<h3>Enter your login info</h3>
+		<form id="signupForm" role="form" method="get" action="/">
+			<h3>Enter your info</h3>
 			<div class="form-group">
 				<label for="userName">User Name:</label>
 				<input type="text" class="form-control" id="userName" placeholder="User Name" name="userName">
@@ -37,7 +37,7 @@
 				<label for="description">Password:</label>
 				<input type="password" class="form-control" id="password" placeholder="Password" name="password">
 			</div>
-		<input type="submit" id="submitBtn" class="btn btn-default" value="Login"></input>
+		<input type="submit" id="submitBtn" class="btn btn-default" value="Sign Up"></input>
 	</form>
 
 	</div>
