Adding signup page

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -31,7 +31,9 @@
 			<a href="/login">
 				<button type="button" class="btn btn-default btn-lg btn-block">Login</button>
 			</a>
-			<button type="button" class="btn btn-default btn-lg btn-block">SignUp</button>
+			<a href="/signup">
+				<button type="button" class="btn btn-default btn-lg btn-block">SignUp</button>
+			</A>
 		</div>
 
 		<!--
