--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -23,17 +23,12 @@
 	<div class="container">
 
 		<nav>
-	    <div class="nav-wrapper">
+	    <div class="nav-wrapper green darken-3">
 	      <a href="/homepage" class="brand-logo">GO!outside</a>
-	      <a href="#" data-activates="mobile-demo" class="button-collapse">
-					<i class="material-icons">menu</i>
-				</a>
-	      <ul class="right hide-on-med-and-down">
-	      </ul>
-	      <ul class="side-nav" id="mobile-demo">
+	      <ul id="nav-mobile" class="right hide-on-med-and-down">
 	      </ul>
 	    </div>
-	  </nav>
+	  </nav
 
 
 
