--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -24,7 +24,7 @@
 
 		<nav>
 	    <div class="nav-wrapper green darken-3">
-	      <a href="/homepage" class="brand-logo">GO!outside</a>
+	      <a href="#" class="brand-logo">GO!outside</a>
 	      <ul id="nav-mobile" class="right hide-on-med-and-down">
 	      </ul>
 	    </div>
