--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -8,7 +8,6 @@
 	<link href="/css/bootstrap.min.css" rel="stylesheet">
 	<link href="/css/bootstrap-theme.min.css" rel="stylesheet">
 	<link href="/css/gooutside.css" rel="stylesheet">
-	<link href="css/materialize.min.css" rel="stylesheet"  media="screen,projection"/>
 	<!-- this is a comment in HTML -->
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -22,16 +21,11 @@
 <body>
 	<div class="container">
 
-		<nav>
-	    <div class="nav-wrapper green darken-3">
-	      <a href="#" class="brand-logo">GO!outside</a>
-	      <ul id="nav-mobile" class="right hide-on-med-and-down">
-	      </ul>
-	    </div>
-	  </nav
-
-
-
+		<div class="navbar">
+			<ul>
+			  <a href="/homepage"><li>GO!outside</li></a>
+			</ul>
+		</div>
 
 	</div>
 
@@ -39,6 +33,5 @@
 	<script src="/js/bootstrap.min.js"></script>
 	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 	<script src="/js/splash.js"></script>
-	<script src="js/materialize.min.js"></script>
 </body>
 </html>
