--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -27,11 +27,20 @@
 			</ul>
 		</div>
 
+		<div class="mat-btn">
+			Map
+		</div>
+		<div class="mat-btn">
+			List
+		</div>
+		<div class="mat-btn">
+			My Profile
+		</div>
+
 	</div>
 
 	<script src="https://code.jquery.com/jquery.js"></script>
 	<script src="/js/bootstrap.min.js"></script>
 	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-	<script src="/js/splash.js"></script>
 </body>
 </html>
