--- a/public/css/gooutside.css
+++ b/public/css/gooutside.css
@@ -38,7 +38,7 @@ body {
 }
 
 .navbar {
-	position: fixed;
+	position: absolute;
 	background: none;
 	border-radius: 0;
 	top: 0;
@@ -78,15 +78,18 @@ body {
 }
 
 .mat-btn {
-  background: #fff;
+	background-color: #4CAF50;
+	color: white;
   border-radius: 2px;
   display: block;
   margin: 1rem;
   position: relative;
-	height: 100px;
+	height: 40px;
   width: 30%;
-	padding-left: auto;
-	padding-right: auto;
+	margin: 10px, auto;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-  transition: all 0.2s ease-in-out;
+}
+
+.mat-btn:hover {
+	box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
