--- a/public/css/gooutside.css
+++ b/public/css/gooutside.css
@@ -38,7 +38,7 @@ body {
 }
 
 .navbar {
-	position: absolute;
+	position: relative;;
 	background: none;
 	border-radius: 0;
 	top: 0;
@@ -82,11 +82,10 @@ body {
 	color: white;
   border-radius: 2px;
   display: block;
-  margin: 1rem;
+  margin: 1rem auto;
   position: relative;
 	height: 40px;
-  width: 30%;
-	margin: 10px, auto;
+  width: 80%;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
 
