--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-	<div class="container">
+	<div class="splash">
 		<!-- h1 through h6 are headers. The higher the number, the smaller the header -->
 		<!-- p means paragraph -->
 
