--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -18,8 +18,8 @@
     <![endif]-->
 </head>
 
-<body>
-	<div class="splash">
+<body class="splash">
+	<div>
 		<!-- h1 through h6 are headers. The higher the number, the smaller the header -->
 		<!-- p means paragraph -->
 
@@ -35,14 +35,6 @@
 				<button type="button" class="btn btn-default btn-lg btn-block">Sign Up</button>
 			</A>
 		</div>
-
-		<!--
-		<div class="navbar">
-			<ul>
-			  <li><a href="/">GO!outside</a></li>
-			</ul>
-		</div>
-		-->
 
 
 	</div>
