--- a/public/css/gooutside.css
+++ b/public/css/gooutside.css
@@ -11,7 +11,12 @@ a {
 	text-decoration: none;
 }
 
-body {
+body .splash{
+	background: url("../images/splash2.jpg") no-repeat center center fixed;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
 	min-height: 100%;
 }
 
