--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -18,8 +18,8 @@
     <![endif]-->
 </head>
 
-<body class="splash">
-	<div>
+<body>
+	<div class="splash">
 		<!-- h1 through h6 are headers. The higher the number, the smaller the header -->
 		<!-- p means paragraph -->
 
