--- a/public/css/gooutside.css
+++ b/public/css/gooutside.css
@@ -1,4 +1,4 @@
-.splash{
+html{
 	background: url("../images/splash2.jpg") no-repeat center center fixed;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
@@ -11,7 +11,7 @@ a {
 	text-decoration: none;
 }
 
-body .splash{
+.splash{
 	background: url("../images/splash2.jpg") no-repeat center center fixed;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
