--- a/public/css/splash.css
+++ b/public/css/splash.css
@@ -1,3 +1,12 @@
+html{
+	background: url("../images/splash2.jpg") no-repeat center center fixed;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+	min-height: 100%;
+}
+
 a {
 	text-decoration: none;
 }
