--- a/public/css/gooutside.css
+++ b/public/css/gooutside.css
@@ -80,7 +80,7 @@ a {
   display: block;
   margin: 1rem auto;
   position: relative;
-	height: 400px;
+	height: 300px;
   width: 90%;
 	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
@@ -100,4 +100,10 @@ a {
 
 .mat-btn:hover {
 	box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+}
+
+span {
+  display: inline-block;
+  vertical-align: middle;
+  line-height: normal;
 }
