--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -28,10 +28,11 @@
 		</div>
 
 		<div class="mat-card">
+			Stuff
 		</div>
 
 		<div class="mat-btn">
-			<span>Map</span>
+			Map
 		</div>
 		<div class="mat-btn">
 			List
