--- a/public/css/gooutside.css
+++ b/public/css/gooutside.css
@@ -80,7 +80,7 @@ a {
   display: block;
   margin: 1rem auto;
   position: relative;
-	height: 300px;
+	height: 250px;
   width: 90%;
 	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
@@ -94,16 +94,11 @@ a {
   margin: 2rem auto;
   position: relative;
 	height: 50px;
+	line-height: 50px;
   width: 80%;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
 
 .mat-btn:hover {
 	box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
-}
-
-span {
-  display: inline-block;
-  vertical-align: middle;
-  line-height: normal;
 }
