--- a/views/map.handlebars
+++ b/views/map.handlebars
@@ -27,20 +27,8 @@
 			</ul>
 		</div>
 
-		<a href="/map">
-			<div class="mat-card">
-				Stuff
-			</div>
-		</a>
-
-		<div class="mat-btn">
-			Map
-		</div>
-		<div class="mat-btn">
-			List
-		</div>
-		<div class="mat-btn">
-			My Profile
+		<div class="mat-card">
+			Map Here
 		</div>
 
 	</div>
