Added list page

--- a/views/places.handlebars
+++ b/views/places.handlebars
@@ -27,24 +27,8 @@
 			</ul>
 		</div>
 
-			<div class="mat-card">
-				Stuff
-			</div>
-
-		<a href="/map">
-			<div class="mat-btn">
-				Map
-			</div>
-		</a>
-
-		<a href="/places">
-			<div class="mat-btn">
-				List
-			</div>
-		</a>
-
-		<div class="mat-btn">
-			My Profile
+		<div class="mat-card">
+			List here
 		</div>
 
 	</div>
