--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -27,27 +27,9 @@
 			</ul>
 		</div>
 
-			<div class="mat-card">
-				Stuff
-			</div>
-
-		<a href="/map">
-			<div class="mat-btn">
-				Map
-			</div>
-		</a>
-
-		<a href="/places">
-			<div class="mat-btn">
-				List
-			</div>
-		</a>
-
-		<a href="/profile">
-			<div class="mat-btn">
-				My Profile
-			</div>
-		</a>
+		<div class="mat-card">
+			Profile here
+		</div>
 
 	</div>
 
