--- a/views/place.handlebars
+++ b/views/place.handlebars
@@ -27,11 +27,9 @@
 			</ul>
 		</div>
 
-		<a href="/places/345">
-			<div class="mat-card">
-				List here
-			</div>
-	</a>
+		<div class="mat-card">
+			Cool spot here! Spot number
+		</div>
 
 	</div>
 
