Place id pls work

--- a/views/place.handlebars
+++ b/views/place.handlebars
@@ -28,7 +28,7 @@
 		</div>
 
 		<div class="mat-card">
-			Cool spot here! Spot number
+			Cool spot here! Spot number {{placeID}}
 		</div>
 
 	</div>
