--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -27,19 +27,23 @@
 			</ul>
 		</div>
 
-		<form id="loginForm" role="form" method="get" action="/">
-			<h3>Enter your login info</h3>
-			<div class="form-group">
-				<label for="userName">User Name:</label>
-				<input type="text" class="form-control" id="userName" placeholder="User Name" name="userName">
-			</div>
-			<div class="form-group">
-				<label for="description">Password:</label>
-				<input type="password" class="form-control" id="password" placeholder="Password" name="password">
-			</div>
-		<input type="submit" id="submitBtn" class="btn btn-default" value="Login"></input>
-	</form>
+		<div class="container">
 
+			<form id="loginForm" role="form" method="get" action="/">
+				<h3>Enter your login info</h3>
+				<div class="form-group">
+					<label for="userName">User Name:</label>
+					<input type="text" class="form-control" id="userName" placeholder="User Name" name="userName">
+				</div>
+				<div class="form-group">
+					<label for="description">Password:</label>
+					<input type="password" class="form-control" id="password" placeholder="Password" name="password">
+				</div>
+			<input type="submit" id="submitBtn" class="btn btn-default" value="Login"></input>
+		</form>
+
+		</div>
+		
 	</div>
 
 	<script src="https://code.jquery.com/jquery.js"></script>
