--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -29,7 +29,7 @@
 		</div>
 
 		<div class="splashbuttons">
-			<a href="/homepage">
+			<a href="/login">
 				<button type="button" class="btn btn-default btn-lg btn-block">Login</button>
 			</a>
 			<a href="/signup">
