--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -39,11 +39,12 @@
 					<label for="description">Password:</label>
 					<input type="password" class="form-control" id="password" placeholder="Password" name="password">
 				</div>
-			<input type="submit" id="submitBtn" class="btn btn-default" value="Login"></input>
-		</form>
-
+				<a href="/homepage">
+					<button type="button" class="btn btn-default btn-lg btn-block">Login</button>
+				</a>
+			</form>
 		</div>
-		
+
 	</div>
 
 	<script src="https://code.jquery.com/jquery.js"></script>
