--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -8,6 +8,8 @@
 	<link href="/css/bootstrap.min.css" rel="stylesheet">
 	<link href="/css/bootstrap-theme.min.css" rel="stylesheet">
 	<link href="/css/gooutside.css" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="/slick/slick.css"/>
+	<link rel="stylesheet" type="text/css" href="/slick/slick-theme.css"/>
 	<!-- this is a comment in HTML -->
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -27,9 +29,11 @@
 			</ul>
 		</div>
 
-			<div class="mat-card">
-				Stuff
-			</div>
+		<div class="carousel">
+		  <div>1</div>
+		  <div>2</div>
+		  <div>3</div>
+		</div>
 
 		<a href="/map">
 			<div class="mat-btn">
@@ -54,5 +58,7 @@
 	<script src="https://code.jquery.com/jquery.js"></script>
 	<script src="/js/bootstrap.min.js"></script>
 	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+	<script src="/slick/slick.min.js"></script>
+	<script src="/js/introHCI.js"></script>
 </body>
 </html>
