--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -8,8 +8,8 @@
 	<link href="/css/bootstrap.min.css" rel="stylesheet">
 	<link href="/css/bootstrap-theme.min.css" rel="stylesheet">
 	<link href="/css/gooutside.css" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="slick/slick.css"/>
-	<link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
+	<link href="/css/slick.css" rel="stylesheet" type="text/css"/>
+	<link href="/css/slick-theme.css" rel="stylesheet" type="text/css"/>
 	<!-- this is a comment in HTML -->
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -58,7 +58,7 @@
 	<script src="https://code.jquery.com/jquery.js"></script>
 	<script src="/js/bootstrap.min.js"></script>
 	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-	<script src="slick/slick.min.js"></script>
+	<script src="/js/slick.min.js"></script>
 	<script src="/js/introHCI.js"></script>
 </body>
 </html>
