--- a/public/css/gooutside.css
+++ b/public/css/gooutside.css
@@ -93,3 +93,15 @@ a {
 .mat-btn:hover {
 	box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
+
+.carousel-item {
+	color: black;
+	text-align: center;
+  border-radius: 2px;
+  display: block;
+  margin: 1rem auto;
+  position: relative;
+	height: 250px;
+  width: 90%;
+	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+}
