--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -30,9 +30,9 @@
 		</div>
 
 		<div class="carousel">
-		  <div>1</div>
-		  <div>2</div>
-		  <div>3</div>
+		  <div class="carousel-item">1</div>
+		  <div class="carousel-item">2</div>
+		  <div class="carousel-item">3</div>
 		</div>
 
 		<a href="/map">
