--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -30,9 +30,15 @@
 		</div>
 
 		<div class="carousel">
-		  <div class="carousel-item">1</div>
-		  <div class="carousel-item">2</div>
-		  <div class="carousel-item">3</div>
+		  <div class="carousel-item">
+				<img src="/images/splash1.jpg"></img>
+			</div>
+		  <div class="carousel-item">
+				<img src="/images/splash2.jpg"></img>
+			</div>
+		  <div class="carousel-item">
+				<img src="/images/splash3.jpg"></img>
+			</div>
 		</div>
 
 		<a href="/map">
