--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -31,13 +31,13 @@
 
 		<div class="carousel">
 		  <div class="carousel-item">
-				<img src="/images/splash1.jpg"></img>
+				<img class="carousel-img" src="/images/splash1.jpg"></img>
 			</div>
 		  <div class="carousel-item">
-				<img src="/images/splash2.jpg"></img>
+				<img class="carousel-img" src="/images/splash2.jpg"></img>
 			</div>
 		  <div class="carousel-item">
-				<img src="/images/splash3.jpg"></img>
+				<img class="carousel-img" src="/images/splash3.jpg"></img>
 			</div>
 		</div>
 
