--- a/public/css/gooutside.css
+++ b/public/css/gooutside.css
@@ -104,3 +104,7 @@ a {
 	height: 250px;
 	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
+
+.carousel-img {
+	height: 250px;
+}
