--- a/views/map.handlebars
+++ b/views/map.handlebars
@@ -25,7 +25,7 @@
 			<ul>
 			  <a href="/homepage">
 					<li>
-						<img src="/images/back.svg" /></li>
+						<img class="back-btn" src="/images/back.svg" /></li>
 					<li>GO!outside</li>
 				</a>
 			</ul>
