--- a/views/map.handlebars
+++ b/views/map.handlebars
@@ -23,11 +23,11 @@
 
 		<div class="navbar">
 			<ul>
-			  <a href="/homepage">
-					<li>
-						<img class="back-btn" src="/images/back.svg" /></li>
-					<li>GO!outside</li>
-				</a>
+				<li>
+					<a href="/homepage">
+						<img class="back-btn" src="/images/back.svg" />
+					</a>
+				</li>
 			</ul>
 		</div>
 
