--- a/views/place.handlebars
+++ b/views/place.handlebars
@@ -23,7 +23,11 @@
 
 		<div class="navbar">
 			<ul>
-			  <a href="/homepage"><li>GO!outside</li></a>
+			  <a href="/places">
+					<li>
+						<img class="back-btn" src="/images/back.svg" />
+					</li>
+				</a>
 			</ul>
 		</div>
 
