--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -23,7 +23,11 @@
 
 		<div class="navbar">
 			<ul>
-			  <li><b>Login</b></li>
+			  <a href="/index">
+					<li>
+						<img class="back-btn" src="/images/back.svg" />
+					</li>
+				</a>
 			</ul>
 		</div>
 
