--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -23,7 +23,11 @@
 
 		<div class="navbar">
 			<ul>
-			  <li><b>Sign Up</b></li>
+			  <a href="/index">
+					<li>
+						<img class="back-btn" src="/images/back.svg" />
+					</li>
+				</a>
 			</ul>
 		</div>
 
@@ -43,7 +47,7 @@
 		</form>
 
 		</div>
-		
+
 	</div>
 
 	<script src="https://code.jquery.com/jquery.js"></script>
