--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -23,7 +23,7 @@
 
 		<div class="navbar">
 			<ul>
-			  <a href="/index">
+			  <a href="/">
 					<li>
 						<img class="back-btn" src="/images/back.svg" />
 					</li>
