--- a/public/css/gooutside.css
+++ b/public/css/gooutside.css
@@ -2,7 +2,7 @@ a {
 	text-decoration: none;
 }
 
-html {
+body {
 	height: 100%;
   background: #808080; /* For browsers that do not support gradients */
   background: -webkit-linear-gradient(left top, #808080, #E6E6E6); /* For Safari 5.1 to 6.0 */
