--- a/public/css/gooutside.css
+++ b/public/css/gooutside.css
@@ -2,13 +2,14 @@ a {
 	text-decoration: none;
 }
 
-body {
+html {
 	height: 100%;
+	min-height: 100%;
   background: #808080; /* For browsers that do not support gradients */
-  background: -webkit-linear-gradient(left top, #808080, #E6E6E6); /* For Safari 5.1 to 6.0 */
-  background: -o-linear-gradient(bottom right, #808080, #E6E6E6); /* For Opera 11.1 to 12.0 */
-  background: -moz-linear-gradient(bottom right, #808080, #E6E6E6); /* For Firefox 3.6 to 15 */
-  background: linear-gradient(to bottom right, #808080, #E6E6E6); /* Standard syntax */
+  background: -webkit-linear-gradient(left top, #E6E6E6, #808080); /* For Safari 5.1 to 6.0 */
+  background: -o-linear-gradient(bottom right, #E6E6E6, #808080); /* For Opera 11.1 to 12.0 */
+  background: -moz-linear-gradient(bottom right, #E6E6E6, #808080); /* For Firefox 3.6 to 15 */
+  background: linear-gradient(to bottom right, #E6E6E6, #808080); /* Standard syntax */
 }
 
 .logo {
