Working on list view

--- a/views/places.handlebars
+++ b/views/places.handlebars
@@ -31,11 +31,46 @@
 			</ul>
 		</div>
 
-		<a href="/places/345">
-			<div class="mat-card">
-				List here
-			</div>
-	</a>
+		<div class="list-place">
+			<a href="/places/1">
+				<img class="list-place-image" src="src/of/main/img.png" />
+				<div class="list-place-name">Name of place</div>
+			</a>
+				<div class="list-place-rating">Rating</div>
+		</div>
+
+		<div class="list-place">
+			<a href="/places/2">
+				<img class="list-place-image" src="src/of/main/img.png" />
+				<div class="list-place-name">Name of place</div>
+			</a>
+				<div class="list-place-rating">Rating</div>
+		</div>
+
+		<div class="list-place">
+			<a href="/places/3">
+				<img class="list-place-image" src="src/of/main/img.png" />
+				<div class="list-place-name">Name of place</div>
+			</a>
+				<div class="list-place-rating">Rating</div>
+		</div>
+
+		<div class="list-place">
+			<a href="/places/4">
+				<img class="list-place-image" src="src/of/main/img.png" />
+				<div class="list-place-name">Name of place</div>
+			</a>
+				<div class="list-place-rating">Rating</div>
+		</div>
+
+		<div class="list-place">
+			<a href="/places/5">
+				<img class="list-place-image" src="src/of/main/img.png" />
+				<div class="list-place-name">Name of place</div>
+			</a>
+				<div class="list-place-rating">Rating</div>
+		</div>
+
 
 	</div>
 
