--- a/views/places.handlebars
+++ b/views/places.handlebars
@@ -34,7 +34,7 @@
 
 		<div class="list-place">
 			<a href="/places/1">
-				<img class="list-place-image" src="src/of/main/img.png" />
+				<img class="list-place-image" src="http://www.planwallpaper.com/static/images/4-Nature-Wallpapers-2014-1_cDEviqY.jpg" />
 				<div class="list-place-name">Name of place</div>
 			</a>
 				<div class="list-place-rating">Rating</div>
@@ -42,7 +42,7 @@
 
 		<div class="list-place">
 			<a href="/places/2">
-				<img class="list-place-image" src="src/of/main/img.png" />
+				<img class="list-place-image" src="http://www.planwallpaper.com/static/images/4-Nature-Wallpapers-2014-1_cDEviqY.jpg" />
 				<div class="list-place-name">Name of place</div>
 			</a>
 				<div class="list-place-rating">Rating</div>
@@ -50,7 +50,7 @@
 
 		<div class="list-place">
 			<a href="/places/3">
-				<img class="list-place-image" src="src/of/main/img.png" />
+				<img class="list-place-image" src="http://www.planwallpaper.com/static/images/4-Nature-Wallpapers-2014-1_cDEviqY.jpg" />
 				<div class="list-place-name">Name of place</div>
 			</a>
 				<div class="list-place-rating">Rating</div>
@@ -58,7 +58,7 @@
 
 		<div class="list-place">
 			<a href="/places/4">
-				<img class="list-place-image" src="src/of/main/img.png" />
+				<img class="list-place-image" src="http://www.planwallpaper.com/static/images/4-Nature-Wallpapers-2014-1_cDEviqY.jpg" />
 				<div class="list-place-name">Name of place</div>
 			</a>
 				<div class="list-place-rating">Rating</div>
@@ -66,7 +66,7 @@
 
 		<div class="list-place">
 			<a href="/places/5">
-				<img class="list-place-image" src="src/of/main/img.png" />
+				<img class="list-place-image" src="http://www.planwallpaper.com/static/images/4-Nature-Wallpapers-2014-1_cDEviqY.jpg" />
 				<div class="list-place-name">Name of place</div>
 			</a>
 				<div class="list-place-rating">Rating</div>
