--- a/views/places.handlebars
+++ b/views/places.handlebars
@@ -34,7 +34,7 @@
 
 		<div class="list-place">
 			<a href="/places/1">
-				<img class="list-place-image" src="http://www.planwallpaper.com/static/images/4-Nature-Wallpapers-2014-1_cDEviqY.jpg" />
+				<img src="http://www.planwallpaper.com/static/images/4-Nature-Wallpapers-2014-1_cDEviqY.jpg" />
 				<div class="list-place-name">Name of place</div>
 			</a>
 				<div class="list-place-rating">Rating</div>
