--- a/views/map.handlebars
+++ b/views/map.handlebars
@@ -31,14 +31,14 @@
 			</ul>
 		</div>
 
-		<div class="mat-card">
-			Map Here
-		</div>
+		<div id="map"></div>
 
 	</div>
 
 	<script src="https://code.jquery.com/jquery.js"></script>
 	<script src="/js/bootstrap.min.js"></script>
 	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+	<script src="/js/map.js"></script>
+	<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDQz_yO6455uNsdT9DYVCADCSbJ7cqz44k&signed_in=true&callback=initMap"></script>
 </body>
 </html>
