--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -10,14 +10,6 @@
 	<link href="/css/gooutside.css" rel="stylesheet">
 	<link href="/css/slick.css" rel="stylesheet" type="text/css"/>
 	<link href="/css/slick-theme.css" rel="stylesheet" type="text/css"/>
-	<!-- this is a comment in HTML -->
-
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-      <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
-    <![endif]-->
 </head>
 
 <body>
@@ -65,6 +57,6 @@
 	<script src="/js/bootstrap.min.js"></script>
 	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 	<script src="/js/slick.min.js"></script>
-	<script src="/js/introHCI.js"></script>
+	<script src="/js/homepage.js"></script>
 </body>
 </html>
