--- a/public/css/map.css
+++ b/public/css/map.css
@@ -1,11 +1,13 @@
-html, body {
+body, html {
   height: 100%;
   min-height: 100%;
+  width: 100%;
   margin: 0;
   padding: 0;
 }
 
 #map {
+  position: relative;
 	height: 90%;
 	width: 90%%;
 	margin: auto;
