--- a/public/css/map.css
+++ b/public/css/map.css
@@ -1,19 +1,6 @@
-body, html {
-  height: 100%;
-  min-height: 100%;
-  width: 100%;
-  margin: 0;
-  padding: 0;
-}
-
-.fill {
-  height: 100%;
-  min-height: 100%;
-}
-
 #map {
   position: relative;
-	height: 90%;
-	width: 90%%;
+	height: 480px;
+	width: 480px;
 	margin: auto;
 }
