--- a/views/place.handlebars
+++ b/views/place.handlebars
@@ -32,7 +32,7 @@
 		</div>
 
 		<div class="mat-card">
-			Cool spot here! Spot number {{placeID}}
+			Cool spot here! Spot number {{place}}
 		</div>
 
 	</div>
