--- a/views/place.handlebars
+++ b/views/place.handlebars
@@ -31,8 +31,20 @@
 			</ul>
 		</div>
 
-		<div class="mat-card">
-			Cool spot here! Spot number {{place}}
+		<div class="place-details">
+			<div class="name">
+				{{place.name}}
+			</div>
+
+			<img src="{{place.image}}" />
+
+			<div class="description">
+				{{place.description}}
+			</div>
+
+			<div class="rating" />
+				{{place.rating}}
+			</div>
 		</div>
 
 	</div>
