--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -25,10 +25,6 @@
 		<!-- h1 through h6 are headers. The higher the number, the smaller the header -->
 		<!-- p means paragraph -->
 
-		<div class="logo">
-			GO!outside
-		</div>
-
 		<div class="form">
 
       <ul class="tab-group">
@@ -39,7 +35,7 @@
       <div class="tab-content">
 
                 <div id="login">
-          <h1>Welcome Back!</h1>
+          <h1>GO!outside</h1>
 
           <form action="/" method="post">
 
@@ -111,7 +107,10 @@
 
 		</div> <!-- /form -->
 
-		<!-- <div class="splashbuttons">
+		<!--<div class="logo">
+					GO!outside
+				</div>
+				<div class="splashbuttons">
 			<a href="/login">
 				<button type="button" class="btn btn-default btn-lg btn-block">Login</button>
 			</a>
