--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -10,14 +10,7 @@
 	<link href="/css/gooutside.css" rel="stylesheet">
 	<link href="/css/splash.css" rel="stylesheet">
 	<link href="/css/login.css" rel="stylesheet">
-	<!-- this is a comment in HTML -->
-
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-      <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
-    <![endif]-->
+	<link href='https://fonts.googleapis.com/css?family=Titillium+Web:400,600italic,300' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
@@ -34,7 +27,7 @@
 
       <div class="tab-content">
 
-                <div id="login">
+        <div id="login">
           <h1>GO!outside</h1>
 
           <form action="/" method="post">
