--- a/public/css/login.css
+++ b/public/css/login.css
@@ -268,7 +268,7 @@ a:hover {
 h1 {
   text-align: center;
   color: #ffffff;
-  font-weight: 300;
+  font-family: 'Titillium Web', sans-serif;
   margin: 0 0 40px;
 }
 
