--- a/public/css/login.css
+++ b/public/css/login.css
@@ -205,7 +205,7 @@ html {
 }
 
 body {
-  background: rgba(19, 35, 47, 1);
+  /*background: rgba(19, 35, 47, 1);*/
   font-family: 'Titillium Web', sans-serif;
 }
 
