--- a/public/css/login.css
+++ b/public/css/login.css
@@ -206,6 +206,7 @@ html {
 
 body {
   /*background: rgba(19, 35, 47, 1);*/
+  background: transparent;
   font-family: 'Titillium Web', sans-serif;
 }
 
