--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -10,6 +10,8 @@
 	<link href="/css/gooutside.css" rel="stylesheet">
 	<link href="/css/slick.css" rel="stylesheet" type="text/css"/>
 	<link href="/css/slick-theme.css" rel="stylesheet" type="text/css"/>
+	<link href='https://fonts.googleapis.com/css?family=Titillium+Web:400,600italic,300' rel='stylesheet' type='text/css'>
+
 </head>
 
 <body>
@@ -17,7 +19,7 @@
 
 		<div class="navbar">
 			<ul>
-			  <a href="/homepage"><li>GO!outside</li></a>
+			  <a href="/homepage"><li>GO!outside </li></a>
 			</ul>
 		</div>
 
@@ -32,6 +34,8 @@
 				<img class="carousel-img" src="/images/splash3.jpg"></img>
 			</div>
 		</div>
+
+		<div>{{req}}</div>
 
 		<a href="/map">
 			<div class="mat-btn">
