--- a/views/map.handlebars
+++ b/views/map.handlebars
@@ -9,6 +9,8 @@
 	<link href="/css/bootstrap-theme.min.css" rel="stylesheet">
 	<link href="/css/gooutside.css" rel="stylesheet">
 	<link href="/css/map.css" rel="stylesheet">
+	<link href='https://fonts.googleapis.com/css?family=Titillium+Web:400,600italic,300' rel='stylesheet' type='text/css'>
+
 </head>
 
 <body>
