--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -30,7 +30,7 @@
         <div id="login">
           <h1>GO!outside</h1>
 
-          <form action="/" method="post">
+          <form action="/userlogin" method="get">
 
             <div class="field-wrap">
             <label>
@@ -57,7 +57,7 @@
         <div id="signup">
           <h1>Sign Up for Free</h1>
 
-          <form action="/" method="post">
+          <form action="/userlogin" method="get">
 
           <div class="top-row">
             <div class="field-wrap">
