--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -48,7 +48,9 @@
 
           <p class="forgot"><a href="#">Forgot Password?</a></p>
 
-          <button class="button button-block"/>Log In</button>
+					<a href="/homepage">
+	          <button class="button button-block"/>Log In</button>
+					</a>
 
           </form>
 
