--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -33,14 +33,14 @@
           <form action="/userlogin" method="get">
 
             <div class="field-wrap">
-            <label>
+            <label id="usr">
               User Name<span class="req">*</span>
             </label>
             <input type="email"required autocomplete="off"/>
           </div>
 
           <div class="field-wrap">
-            <label>
+            <label id="pw">
               Password<span class="req">*</span>
             </label>
             <input type="password"required autocomplete="off"/>
