--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -33,17 +33,17 @@
           <form action="/userlogin" method="get">
 
             <div class="field-wrap">
-            <label id="usr">
+            <label >
               User Name<span class="req">*</span>
             </label>
-            <input type="email"required autocomplete="off"/>
+            <input id="usr" type="email"required autocomplete="off"/>
           </div>
 
           <div class="field-wrap">
-            <label id="pw">
+            <label >
               Password<span class="req">*</span>
             </label>
-            <input type="password"required autocomplete="off"/>
+            <input id="pw" type="password"required autocomplete="off"/>
           </div>
 
           <p class="forgot"><a href="#">Forgot Password?</a></p>
