--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -24,9 +24,11 @@
 		</div>
 
 		<div class="carousel">
+			{{#each pics}}
 		  <div class="carousel-item">
 				<img class="carousel-img" src="{{name}}"></img>
 			</div>
+			{{/each}}
 		</div>
 
 		<a href="/map">
