--- a/views/places.handlebars
+++ b/views/places.handlebars
@@ -32,7 +32,8 @@
 				<img src="{{image}}" />
 				<div class="list-place-name">{{name}}</div>
 			</a>
-				<div class="list-place-rating">{{rating}}</div>
+				<div class="lis-place-desc">{{description}}</div>
+				<div class="list-place-rating">{{ratings.overall}}</div>
 		</div>
 		{{/each}}
 
