--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -18,8 +18,19 @@
 	<div>
 
 		<div class="navbar">
-			<ul>
-			  <a href="/homepage"><li>GO!outside </li></a>
+			<ul class="left">
+			  <a href="/homepage">
+					<li>
+						GO!outside
+					</li>
+				</a>
+			</ul>
+			<ul class="right">
+				<a href="/">
+					<li>
+						Logout
+					</li>
+				</a>
 			</ul>
 		</div>
 
