--- a/views/places.handlebars
+++ b/views/places.handlebars
@@ -33,7 +33,7 @@
 				<div class="list-place-name">{{name}}</div>
 			</a>
 				<div class="lis-place-desc">{{description}}</div>
-				<div class="list-place-rating">{{ratings.overall}}</div>
+				<div class="list-place-rating">Overall Rating: {{ratings.overall}}</div>
 		</div>
 		{{/each}}
 
