--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -33,14 +33,14 @@
           <form action="/homepage" method="get">
 
             <div class="field-wrap">
-            <label >
+            <label class="active">
               User Name<span class="req">*</span>
             </label>
             <input id="usr" type="email"required autocomplete="off"/>
           </div>
 
           <div class="field-wrap">
-            <label >
+            <label class="active">
               Password<span class="req">*</span>
             </label>
             <input id="pw" type="password"required autocomplete="off"/>
