--- a/views/place.handlebars
+++ b/views/place.handlebars
@@ -38,7 +38,13 @@
 			</div>
 
 			<div class="rating" />
-				Overall Rating: {{place.rating.overall}}
+				Overall Rating: {{place.ratings.overall}}
+				<br>
+				Secludedness: {{place.ratings.sedluded}}
+				<br>
+				Romanticness: {{place.ratings.romantic}}
+				<br>
+				Quiet: {{place.ratings.quite}}
 			</div>
 		</div>
 
