--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -37,7 +37,9 @@
 		<div class="carousel">
 			{{#each pics}}
 		  <div class="carousel-item">
-				<img class="carousel-img" src="{{name}}"></img>
+				<a href="/places/{{id}}" >
+					<img class="carousel-img" src="{{name}}"></img>
+				</a>
 			</div>
 			{{/each}}
 		</div>
