--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -25,7 +25,9 @@
 			</ul>
 		</div>
 
-		<div class="profile-details">
+		{{profile.name}}
+
+		<!-- <div class="profile-details">
 			<div class="name">
 				{{profile.name}}
 			</div>
@@ -50,7 +52,7 @@
 					<div class="lis-place-desc">{{description}}</div>
 					<div class="list-place-rating">Overall Rating: {{ratings.overall}}</div>
 			</div>
-		</div>
+		</div> -->
 
 	</div>
 
