--- a/views/place.handlebars
+++ b/views/place.handlebars
@@ -44,7 +44,7 @@
 				<br>
 				Romanticness: {{place.ratings.romantic}}
 				<br>
-				Quiet: {{place.ratings.quite}}
+				Quiet: {{place.ratings.quiet}}
 			</div>
 		</div>
 
