--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -25,8 +25,7 @@
 			</ul>
 		</div>
 
-		Pls
-
+		Something something pls work!
 		<!-- <div class="profile-details">
 			<div class="name">
 				{{profile.name}}
