--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -58,5 +58,6 @@
 	<script src="https://code.jquery.com/jquery.js"></script>
 	<script src="/js/bootstrap.min.js"></script>
 	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+	<script src="/js/profile.js"></script>
 </body>
 </html>
