--- a/views/uploads.handlebars
+++ b/views/uploads.handlebars
@@ -25,12 +25,39 @@
 			</ul>
 		</div>
 
-		Upload
+		Something something pls work!
+		<!-- <div class="profile-details">
+			<div class="name">
+				{{profile.name}}
+			</div>
+
+			{{#if profile.hasImage}}
+			<img src="{{profile.image}}" />
+			{{#else}}
+			{{/if}}
+
+			<div class="description">
+				{{profile.description}}
+			</div>
+
+			<div class="places" />
+			My places:
+			{{#each profile.places}}
+			<div class="list-place" id="{{id}}">
+				<a href="/places/{{id}}">
+					<img src="{{image}}" />
+					<div class="list-place-name">{{name}}</div>
+				</a>
+					<div class="lis-place-desc">{{description}}</div>
+					<div class="list-place-rating">Overall Rating: {{ratings.overall}}</div>
+			</div>
+		</div> -->
 
 	</div>
 
 	<script src="https://code.jquery.com/jquery.js"></script>
 	<script src="/js/bootstrap.min.js"></script>
 	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+	<script src="/js/profile.js"></script>
 </body>
 </html>
