--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -27,6 +27,10 @@
 
 		Something something pls work!
 
+		<div class="name">
+			{{profile.name}}
+		</div>
+
 	</div>
 
 	<script src="https://code.jquery.com/jquery.js"></script>
