--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -27,8 +27,31 @@
 
 		Something something pls work!
 
-		<div class="name">
-			{{profile.name}}
+		<div class="profile-details">
+			<div class="name">
+				{{profile.name}}
+			</div>
+
+			{{#if profile.hasImage}}
+			<img src="{{profile.image}}" />
+			{{#else}}
+			{{/if}}
+
+			<div class="description">
+				{{profile.description}}
+			</div>
+
+			<div class="places" />
+			My places:
+			{{#each profile.places}}
+			<div class="list-place" id="{{id}}">
+				<a href="/places/{{id}}">
+					<img src="{{image}}" />
+					<div class="list-place-name">{{name}}</div>
+				</a>
+					<div class="lis-place-desc">{{description}}</div>
+					<div class="list-place-rating">Overall Rating: {{ratings.overall}}</div>
+			</div>
 		</div>
 
 	</div>
