--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -46,12 +46,17 @@
 					<img src="{{image}}" />
 					<div class="list-place-name">{{name}}</div>
 				</a>
-				<div class="lis-place-desc">{{description}}</div>
+				<!-- <div class="lis-place-desc">{{description}}</div> -->
 				<div class="list-place-rating">Overall Rating: {{ratings.overall}}</div>
 			</div>
 			{{/each}}
 		</div>
 
+		<div class="mat-btn">
+			<a href="/upload">
+				Upload New Spot
+			</a>
+		</div>
 
 	</div>
 
