--- a/views/upload.handlebars
+++ b/views/upload.handlebars
@@ -17,43 +17,58 @@
 
 		<div class="form">
 
-      <div class="tab-content">
+			<div id="login">
+        <h1>Upload</h1>
 
-        <div id="Upload">
-          <h1>Upload</h1>
+				<form action="/" method="post">
 
-          <form action="/homepage" method="get">
-
-            <div class="field-wrap">
-            <label class="active">
-              User Name<span class="req">*</span>
-            </label>
-            <input id="usr" type="email"required autocomplete="off"/>
-          </div>
-
-          <div class="field-wrap">
-            <label class="active">
-              Password<span class="req">*</span>
-            </label>
-            <input id="pw" type="password"required autocomplete="off"/>
-          </div>
-
-          <p class="forgot"><a href="#">Forgot Password?</a></p>
-
-					<a href="/homepage">
-	          <button class="button button-block"/>Log In</button>
-					</a>
-
-          </form>
-
+        <div class="field-wrap">
+          <label class="active">
+          	Place<span class="req">*</span>
+          </label>
+          <input type="text" required autocomplete="off"/>
         </div>
 
-      </div><!-- tab-content -->
+        <div class="field-wrap">
+          <label class="active">
+            Description<span class="req">*</span>
+          </label>
+          <input type="text"required autocomplete="off"/>
+        </div>
 
+        <div class="field-wrap">
+          <label class="active">
+            Secluded <span class="req">*</span>
+          </label>
+          <input type="number" min="0" max="5" required autocomplete="off"/>
+        </div>
+
+        <div class="field-wrap">
+          <label class="active">
+            Romantic <span class="req">*</span>
+          </label>
+        	<input type="number" min="0" max="5" required autocomplete="off"/>
+        </div>
+
+        <div class="field-wrap">
+          <label class="active">
+            Quiet <span class="req">*</span>
+          </label>
+          <input type="number" min="0" max="5" required autocomplete="off"/>
+        </div>
+
+        <div class="field-wrap">
+          <label class="active">
+            Overall <span class="req">*</span>
+          </label>
+          <input type="number" min="0" max="5" required autocomplete="off"/>
+        </div>
+
+        <button class="button button-block"/>Send It!</button>
+
+      	</form>
+    	</div>
 		</div> <!-- /form -->
-
-
-
 	</div>
 
 	<script src="https://code.jquery.com/jquery.js"></script>
