--- a/views/upload.handlebars
+++ b/views/upload.handlebars
@@ -15,6 +15,17 @@
 <body>
 	<div>
 
+		<div class="navbar">
+			<ul>
+				<a href="/profile">
+					<li>
+						<img class="back-btn" src="/images/back.svg" />
+					</li>
+				</a>
+			</ul>
+		</div>
+
+
 		<div class="form">
 
 			<div id="login">
