--- a/views/test.handlebars
+++ b/views/test.handlebars
@@ -26,15 +26,7 @@
 			</ul>
 		</div>
 
-		{{#each places}}
-		<div class="list-place" id="{{id}}">
-			<a href="/places/{{id}}">
-				<img src="{{image}}" />
-				<div class="list-place-name">{{name}}</div>
-			</a>
-				<div class="list-place-rating">Overall Rating: {{ratings.overall}}</div>
-		</div>
-		{{/each}}
+		{{str}}
 
 	</div>
 
