--- a/views/upload.handlebars
+++ b/views/upload.handlebars
@@ -31,48 +31,55 @@
 			<div id="login">
         <h1>Upload</h1>
 
-				<form action="/" method="post">
+				<form id="upload" action="/places" method="post">
 
         <div class="field-wrap">
           <label class="active">
           	Place<span class="req">*</span>
           </label>
-          <input type="text" required autocomplete="off"/>
+          <input type="text" name="name" required autocomplete="off"/>
+        </div>
+
+				<div class="field-wrap">
+          <label class="active">
+            Overall <span class="req">*</span>
+          </label>
+					<input type="file" accept="image/*" name="image" capture="camera" required>
         </div>
 
         <div class="field-wrap">
           <label class="active">
             Description<span class="req">*</span>
           </label>
-          <input type="text"required autocomplete="off"/>
+          <input type="text" name="description" required autocomplete="off"/>
         </div>
 
         <div class="field-wrap">
           <label class="active">
             Secluded <span class="req">*</span>
           </label>
-          <input type="number" min="0" max="5" required autocomplete="off"/>
+          <input type="number" min="0" max="5" name="secluded" required autocomplete="off"/>
         </div>
 
         <div class="field-wrap">
           <label class="active">
             Romantic <span class="req">*</span>
           </label>
-        	<input type="number" min="0" max="5" required autocomplete="off"/>
+        	<input type="number" min="0" max="5" name="romantic" required autocomplete="off"/>
         </div>
 
         <div class="field-wrap">
           <label class="active">
             Quiet <span class="req">*</span>
           </label>
-          <input type="number" min="0" max="5" required autocomplete="off"/>
+          <input type="number" min="0" max="5" name="quiet" required autocomplete="off"/>
         </div>
 
         <div class="field-wrap">
           <label class="active">
             Overall <span class="req">*</span>
           </label>
-          <input type="number" min="0" max="5" required autocomplete="off"/>
+          <input type="number" min="0" max="5" name="overall" required autocomplete="off"/>
         </div>
 
         <button class="button button-block"/>Send It!</button>
