--- a/views/upload.handlebars
+++ b/views/upload.handlebars
@@ -42,9 +42,9 @@
 
 				<div class="field-wrap">
           <label class="active">
-            Overall <span class="req">*</span>
+            Image URL <span class="req">*</span>
           </label>
-					<input type="file" accept="image/*" name="image" capture="camera" required>
+					<input type="text" name="image" required>
         </div>
 
         <div class="field-wrap">
