--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -34,7 +34,7 @@
 
             <div class="field-wrap">
             <label class="active">
-              User Name<span class="req">*</span>
+              Email<span class="req">*</span>
             </label>
             <input id="usr" type="email"required autocomplete="off"/>
           </div>
@@ -101,18 +101,6 @@
       </div><!-- tab-content -->
 
 		</div> <!-- /form -->
-
-		<!--<div class="logo">
-					GO!outside
-				</div>
-				<div class="splashbuttons">
-			<a href="/login">
-				<button type="button" class="btn btn-default btn-lg btn-block">Login</button>
-			</a>
-			<a href="/signup">
-				<button type="button" class="btn btn-default btn-lg btn-block">Sign Up</button>
-			</A>
-		</div> -->
 
 
 	</div>
