--- a/views/place.handlebars
+++ b/views/place.handlebars
@@ -40,7 +40,7 @@
 			<div class="rating" />
 				Overall Rating: {{place.ratings.overall}}
 				<br>
-				Secludedness: {{place.ratings.sedluded}}
+				Secludedness: {{place.ratings.secluded}}
 				<br>
 				Romanticness: {{place.ratings.romantic}}
 				<br>
