--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -57,9 +57,9 @@
 			</div>
 		</a>
 
-		<a href="/profile">
+		<a href="/upload">
 			<div class="mat-btn">
-				My Profile
+				Upload New Spot
 			</div>
 		</a>
 
