--- a/views/upload.handlebars
+++ b/views/upload.handlebars
@@ -18,8 +18,8 @@
 
 		<div class="navbar">
 			<ul>
-				<a href="/profile">
-					<li>
+			  <a href="#">
+					<li onclick="history.go(-1);">
 						<img class="back-btn" src="/images/back.svg" />
 					</li>
 				</a>
