--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -109,7 +109,7 @@
 	<script src="https://code.jquery.com/jquery.js"></script>
 	<script src="/js/bootstrap.min.js"></script>
 	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-	<!-- <script src="/js/login.js"></script> -->
+	<script src="/js/login.js"></script>
 
 </body>
 </html>
