--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -2,6 +2,7 @@
 
 <html>
 <head>
+	{{> experiment}}
 	<title>GO!outide</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -70,5 +71,6 @@
 	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 	<script src="/js/slick.min.js"></script>
 	<script src="/js/homepage.js"></script>
+	{{> ga}}
 </body>
 </html>
